# iv

./: .gitignore  Cargo.toml  README.md  target  upload-n.sh  upload.sh
_ias/: Cargo.toml  README.md  readme.md
_ias/data/: ias-alarm-tu.json  maa-device.json  maa-rule.json
_ias/src/: cfg.rs  dump.rs  node.rs  view.rs
_ias/src/adapter/tu/: mod.rs
_ias/src/app/: app.rs  params.rs
_ias/src/sample/: mod.rs
_ias/src/scene/atm/: mod.rs
_ias/src/scene/disaster/: mod.rs
_ias/src/scene/elevator/: mod.rs
_ias/src/scene/instrument/: mod.rs
_ias/src/scene/vehicle/: mod.rs
_ias/src/sensor/: base.rs  cfg.rs  info.rs  msg.rs
_ias/src/source/: cfg.rs
_trash/iv-va/: Cargo.toml
_trash/iv-va/src/trash/: iv-optical-flow.rs
assets/: ff_stream.json
docs/plans/: 2026-01-27-audio-spectrum-design.md
ias/: Cargo.toml
ias-camera/src/camera/: camera.rs
ias/data/: ias-alarm.json  maa-alarm.json
ias/src/: alarm.rs  app.rs  basic.rs  cfg.rs  dump.rs  lib.rs  sensor.rs  view.rs
ias/src/adapter/: mod.rs
ias/src/adapter/maa/: mod.rs  msg.rs
ias/src/adapter/tu/: mod.rs
ias/src/app/: app.rs  mod.rs  params.rs  rx_app.rs
ias/src/sample/: cfg.rs
ias/src/scene/: mod.rs
ias/src/scene/atm/: maa.rs  mod.rs
ias/src/scene/disaster/: mod.rs
ias/src/scene/elevator/: mod.rs
ias/src/scene/environment/: mod.rs
ias/src/scene/instrument/: mod.rs
ias/src/scene/vehicle/: mod.rs
ias/src/sensor/: base.rs  cfg.rs  info.rs  mod.rs  msg.rs  sensor.rs
ias/src/source/: info.rs  mod.rs
iv/: Cargo.toml
iv-audio-io/: Cargo.toml
iv-audio-io/src/: input.rs  lib.rs  play.rs
iv-camera/: Cargo.toml
iv-camera/src/: lib.rs
iv-core/: Cargo.toml
iv-core/src/: basic.rs  lib.rs
iv-core/src/geo/: GEO.md  mod.rs  normalize.rs  point.rs  polygon.rs  rect.rs  shape.rs  size.rs  types.rs
iv-core/src/geo/iface/: irect.rs  isize_2d.rs  mod.rs
iv-gui/: Cargo.toml  README.md
iv-gui/src/: image_win.rs  lib.rs
iv-mm/: Cargo.toml  README.md
iv-mm/src/: camera.rs  lib.rs
iv-mm/src/camera/: a.rs  camera.rs  mod.rs
iv-mm/src/ff/: extract_images.rs  ipc.rs  mod.rs
iv-mm/src/image/: _d.rs  buffer_3c.rs  color.rs  d.rs  draw.rs  image_2d.rs  image_rgb.rs  mod.rs  ocv.rs  pen.rs  proc.rs  show.rs  util.rs
iv-mm/src/meta/: exif.rs  mod.rs
iv-mm/src/sound/: input.rs  mod.rs  play.rs
iv-va/: Cargo.toml  README.md
src/: main.rs  processor.rs  subtitle.rs
