[package]
name = "jsr_video_subs"
version = "0.1.0"
edition = "2021"
description = "Video subtitle synthesis tool for JSR"
authors = ["dayn9t <dayn9t@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.13"

[dev-dependencies]
tempfile = "3.13"
