[package]
name = "ias"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rx = { path = "../../rx/rx" }

chrono = { version = "*", features = ["serde"] }
uuid = { version = "0.6.*", features = ["serde", "v5"] }

serde = "*"
serde_json = "*"
serde_derive = "*"

clap = "*"