[package]
name = "ias"
version = "0.1.1"
authors = ["Howell J. <dayn9t@gmail.com>"]
edition = "2018"

[build-dependencies]
vergen = "3"

[dependencies]
rx-core = { path = "../../rx/rx-core" }
rx-db = { path = "../../rx/rx-db" }
rx-net = { path = "../../rx/rx-net" }
iv-core = { path = "../../iv/iv-core" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

chrono = { version = "*", features = ["serde"] }
uuid = { version = "0.6.*", features = ["serde", "v5"] }

clap = "*"

