[package]
name = "iv-camera"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

iv-mm = { path = "../iv-mm" }
iv-core = { path = "../iv-core" }
rx-core = { path = "../../rx/rx-core" }

image = "*"

tracing = "*"
anyhow = "*"
thiserror = "*"

libcamera = "*"
