[package]
name = "iv-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rx-core = { path = "../../rx/rx-core" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

num = "*"
num-traits = "*"
geo = "*"
geo-types = "*"
derive_more = "*"
