[package]
name = "iv-gui"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iv-mm = { path = "../iv-mm" }
iv-core = { path = "../iv-core" }

rx-core = { path = "../../rx/rx-core" }

image = "*"

tracing = "*"
anyhow = "*"
thiserror = "*"
path_macro = "*"

rand = "*"
iced = { version = "*", features = ["image", "canvas", "tokio", "debug"] }
opencv = { version = "*", default-features = false, features = ["clang-runtime", "imgproc", "highgui", "imgcodecs"] }
tracing-subscriber = "*"
chrono = "*"
serde = "*"
serde_json = "*"

