[package]
name = "iv-mm"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2021"

[dependencies]
iv-core = { path = "../iv-core" }
rx-core = { path = "../../rx/rx-core" }

image = "*"

tracing = "*"
anyhow = "*"
thiserror = "*"
path_macro = "*"

opencv = { version = "*", default-features = false, features = ["clang-runtime", "imgproc", "highgui"] }

