[package]
name = "iv-mm"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2024"

[dependencies]
iv-core = { path = "../iv-core" }
rx-core = { path = "../../rx/rx-core" }
rx-linux = { path = "../../rx/rx-linux" }

image = "*"
#rexif = "*" # 支持:  JPEG and TIFF
#nom-exif = "*" # 新, 支持多种图片/视频文件格式
rexiv2 = "*" # 支持读写, 依赖: libgexiv2-dev


tracing = "*"
anyhow = "*"
thiserror = "*"
path_macro = "*"

ffmpeg-next = "*"

opencv = { version = "*", default-features = false, features = ["clang-runtime", "imgproc", "highgui"] }

clap = { version = "*", features = ["derive"] }
chrono = "*"
tempfile = "*"
serde = "*"
serde_json = "1.0.134"

