[package]
name = "iv-va"
version = "0.1.0"
authors = ["dayn9t <dayn9t@gmail.com>"]
edition = "2021"

[dependencies]
rx-core = { path = "../../rx/rx-core" }
rx-db = { path = "../../rx/rx-db" }
rx-net = { path = "../../rx/rx-net" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

opencv = "*"